--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,5 +19,10 @@
     <string name="caption_filter">Filter:</string>
     <string name="caption_na">N/A</string>
     <string name="caption_reviewed_by">Reviewed by</string>
+    <string name="app_search">Search</string>
+    <string name="app_about">About</string>
+    <string name="app_filter_by_vendor">Vendor</string>
+    <string name="app_setting">Setting</string>
+    <string name="app_filter_by_category">Category</string>
 
 </resources>
